Add the delete diary function. Start refactoring the iCloud functions.

--- a/NoNote/Language/Base.lproj/Localizable.strings
+++ b/NoNote/Language/Base.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "#saveToICloundError" = "Cannot connect to your iCloud, please check your connection. Your diary is saved to your phone.";
 "#ok" = "OK";
 "#dontShowAlert" = "Don‘t Show Again";
+"#delete" = "Delete";
